--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[{"Package":"com.my.newproject85","Version":"2","Link":"www.google.com","Get":"TRUE"}]
+[{"Package":"com.my.newproject85","Version":"2","Link":"www.google.com"}]
